json inactivo vista

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
         <button type="submit" id="send-button" class="send-btn" disabled>Enviar</button>
       </form>
     </main>
+
+    <button onclick="window.location.href=' http://localhost:5000/';"> Ir al enlace </button>
+    <button onclick="window.location.href='http://localhost:5000/api/usuarios';"> Ir al enlace </button>
+    <button onclick="window.location.href='http://localhost:5000/admin';"> Ir al enlace </button>
   </div>
 </body>
 </html>
