--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 </div>
 
 <div id="admin-button-container" style="display: none; margin-top: 10px;">
-  <button onclick="window.open('http://localhost:5000/admin', '_blank');">
-    Abrir Admin de Usuarios
-  </button>
+<button onclick="window.location.href = 'http://localhost:5000/admin';">
+  Abrir Admin de Usuarios
+</button>
 </div>
 
   <script src="script.js"></script>
