--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </div>
 
 <div id="admin-button-container" style="display: none; margin-top: 10px;">
-<button onclick="window.location.href = 'http://localhost:5000/admin';">
+<button id="admin-redirect-button">
   Abrir Admin de Usuarios
 </button>
 </div>
