Mostrar usuarios multicast

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
           disabled
         />
 
+        <button type="button" id="random-user-btn" class="ghost-btn" title="Usuario Aleatorio" disabled>
+          👤
+        </button>
+        <select id="user-list-select" class="ghost-btn" disabled>
+         <option value="">Ver Usuario...</option>
+         </select>
         <button type="button" id="time-button" class="ghost-btn" title="Solicitar hora UTC" disabled>
           🕒
         </button>
